<resources>
    <string name="app_name">Wffr</string>
    <string name="title_activity_home_page">HomePageActivity</string>
    <string name="title_home">Offers</string>
    <string name="title_dashboard">Search</string>
    <string name="title_notifications">Featured</string>
    <string name="title_account">Account</string>
    <string name="title_activity_home_page2">HomePage2Activity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="inv_tele">Please Enter A Valid number</string>
    <string name="inv_img">Please Choose Photo</string>
    <string name="inv_name">Please Enter A Valid Name</string>
    <string name="rong_email">Wrong Email</string>
    <string name="diff_passes">NoN Equal passwords</string>
    <string name="choose_gend">please Choose Gender</string>
    <string name="choose_pass">Please Enter Password</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_nav_drawer">NavDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="facebook_app_id" translatable="false">5270891179595342</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb5270891179595342</string>
    <string name="menu_home">Sign In As Shop</string>
    <string name="loved_us">Loved Us?</string>
    <string name="loved_you">I Love</string>
    <string name="loved_ok">It\'s OK </string>
    <string name="loved_no">No</string>
    <string name="rate_shop">Rate Shop</string>
    <string name="rate">Rate</string>
    <string name="menu_gallery">Contact Us</string>
    <string name="menu_slideshow">Settings</string>
    <string name="pass_word">Password</string>
    <string name="forget_pass2">Forget Password</string>
    <string name="ch_pass">Change Password</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="ph_num">Phone Number</string>
    <string name="gender">Gender</string>
    <string name="upl_photo">Upload Photo</string>
    <string name="upl_personal_photo">Upload Personal Photo</string>
    <string name="account_available">Don\'t Have Account? </string>
    <string name="sign_in_now">Sign Up Now</string>
    <string name="tshirt">TShirt</string>
    <string name="off">30% Off</string>
    <string name="off50">50% Off</string>
    <string name="all_ofer">All Offers</string>
    <string name="resturants">Restaurants</string>
    <string name="clothes">Clothes</string>
    <string name="shoes">Shoes</string>
    <string name="health_beauty">Health And Beauty</string>
    <string name="gen_services">General Services</string>
    <string name="press_here">Press Here</string>
    <string name="kfc_hen">Kfc Chicken</string>
    <string name="adidas">Adidas</string>
    <string name="paid_mon">Paid Money</string>
    <string name="shops">Shops</string>
    <string name="item_total">Items Total</string>
    <string name="save_rate">Saving Rate</string>
    <string name="saving_balance">Saving Balance</string>
    <string name="sign_as">Sign In As Shop</string>
    <string name="contact">Contact Us</string>
    <string name="save_to">Save To</string>
    <string name="user">User</string>
    <string name="soc_maedia">Find us on social media</string>
    <string name="us_name"></string>
    <string name="ch_lang">Change Language</string>
    <string name="ch_accont">Change account</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="main_menu">Home Page</string>
    <string name="prev_menu">Previous Orders</string>
    <string name="favor_menu">Favourite</string>
    <string name="about_menu">About Us</string>
    <string name="add_menu">Add Restaurant</string>
    <string name="connected_wifi">You Are Connected Via WiFi</string>
    <string name="connected_mobile">You Are Connected Via Mobile</string>
    <string name="special_offer">Featured Offers</string>
    <string name="kfc_definition">Kfc is an international restaurants chain \n introducing fast meals and has many branches in \n all kuwait areas.Their meals are just chicken</string>
    <string name="kfc_address">Kuwait - 360 compound - circular way</string>
    <string name="home_second">Home Second</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_settings">Settings</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="en" translatable="false">en-us</string>
    <string name="ar" translatable="false">ar</string>
    <string name="ok">submit</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="mydata">My Data</string>
    <string name="ac_type">Activity Type</string>
    <string name="gender_type">Gender</string>
    <string name="address">Address</string>
    <string name="back_pass">Restore Password</string>
    <string name="ver_code">Verification Code</string>
    <string name="comp">Suggestions &amp; Complaints</string>
    <string name="record">Record</string>
    <string name="cal_from">From</string>
    <string name="cal_to">To</string>
    <string name="tab_disp">Display All</string>
    <string name="tab_search">Search</string>
    <string name="tab_code">&#160;Code&#160;</string>
    <string name="tab_producer">Producer</string>
    <string name="tab_bef_disc">Before Discount</string>
    <string name="tab_disc">Discount</string>
    <string name="tab_total">Total</string>
    <string name="tab_date">Date</string>
    <string name="reports">Monthly Reports</string>
    <string name="balance">Operations</string>
    <string name="ab_wffr">About Waffr</string>
    <string name="faq">FAQ</string>
    <string name="what_waffr">what is waffr?</string>
    <string name="wht_wffr_do">what does waffr do?</string>
    <string name="why_wffr">why should i prefer to order from waffr?</string>
    <string name="cost">How much does waffr services using cost?</string>
    <string name="q1ans">
Wffr is a leading company that connects customers with their favorite restaurants over the Internet and operates in the State of Kuwait \ n We provide an easy and fast way to connect customers with their favorite restaurants. All it takes is simple and easy steps, using your personal computer, your mobile phone, or even your tablet device, to choose your preferred order through Wffr.</string>
    <string name="q2ans">We simply receive the order submitted by you and send it to the restaurant through a connected program between Wffr and the restaurant, so you do not have to deal with the hassles of submitting the order by phone, and we make sure that you receive your order on time.</string>
    <string name="q3ans">Wffr is a huge dining hall for many restaurants, so you do not need to go through the hassle of remembering restaurant numbers, waiting on the phone, getting a busy response when managing the restaurant number, or getting the wrong order due to a mistake in calling the phone. Besides, by using Wffr, you can view menus, pictures of dishes and pictures of all your favorite restaurants through our website in an easy way.</string>
    <string name="q4ans">The only additional cost that can be added to the order value relates only to the restaurant delivery fee.</string>
    <string name="sign_in_nav">SignIn</string>
    <string name="q5">what if i forgot my password?</string>
    <string name="q6">How to order from waffr?</string>
    <string name="q7">How to register my data?</string>
    <string name="q8">How to use waffr services?</string>
    <string name="q9">How to join waffr?</string>
    <string name="qten">How to cancel my order?</string>
    <string name="q11">why should i register?</string>
    <string name="q12">some restaurants i like don\'t exist in waffr?</string>
    <string name="q13">How to dial through waffr?</string>
    <string name="q14">How to buy coupon?</string>
    <string name="q5ans">If you repeatedly enter the email / password 5 times, your account will be temporarily suspended. The system will automatically send the email confirmation link to your email address, and you must click on this link in order to activate your account. In this email, we will also ask you to choose a new password to use for FoodBoy.</string>
    <string name="q6ans">Simply, follow these instructions:

a. Initially, you can order as a registered member or as a speed-order without registration. Click here to register.
B. Choose the region you live in and click "Order"
C. Choose your favorite restaurant from the list by clicking on the name or logo.
Dr.. Check the box next to your choice of item and add the number in the quantity you want next to the box. Scroll to the bottom of the page to view all the listings and click Next through the cart.
E. Make sure all the information is correct, then press "Submit Order" to fulfill your request. Your order will be directed to the restaurant immediately. It should be noted that if you use our service for the first time, we will call your mobile phone number in order to verify your data.</string>
    <string name="q7ans"></string>
    <string name="q8ans"></string>
    <string name="q9ans"></string>
    <string name="weekofs">Weekly Offers</string>
    <string name="disc">Discount</string>
    <string name="newprod">New Products</string>
    <string name="urgovern">What Is Your Governorate</string>
    <string name="wrngeorpass">Wrong Email OR PassWord</string>
    <string name="featofs">Featured Offers</string>
    <string name="noofs">No Offers exist</string>
    <string name="sign_in_success">Signed In Successfully</string>
    <string name="call">Dial</string>
    <string name="faveofs">Favourite Offers</string>
    <string name="billofs">Total Billed offers</string>
    <string name="qtenans">You can cancel your order (either cash, prepaid, or credit cards) within 5 minutes of submitting your order. Please note that you cannot cancel your order afterwards due to the ability to fulfill your order by the restaurant. In the event that your order is delayed for more than 20 minutes after the delivery time specified by the restaurant, you can also cancel your order. For prepaid card requests, please read the terms and conditions of the prepaid card.

(Payment service by prepaid cards is only available on our website dedicated to serving the State of Kuwait and the Kingdom of Bahrain)</string>
    <string name="q11ans"></string>
    <string name="offers">Offers</string>
    <string name="featured">Featured</string>
    <string name="search">Search</string>
    <string name="account">Account</string>
    <string name="total">Total</string>
    <string name="settings">Settings</string>
    <string name="policies">Policies &amp; Terms</string>
    <string name="phone">Phone</string>
    <string name="pass_recover">Password Recovery</string>
    <string name="recover">Recover</string>
    <string name="product">Product</string>
    <string name="price">Price</string>
    <string name="discount">Discount</string>
    <string name="date">Date</string>
    <string name="cancel">Cancel</string>
    <string name="verify_code">Verification Code</string>
    <string name="agree">Agree</string>
    <string name="disagree">Disagree</string>
    <string name="like">Like</string>
    <string name="fair">Fair</string>
    <string name="dislike">Dislike</string>
    <string name="like_wffr">Do you Like Wffr ?</string>
    <string name="verify">Verify</string>
</resources>