<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layoutDirection="rtl">


    <item
        android:id="@+id/navigation_offers"
        android:icon="@drawable/img_home_sel"
        android:title="@string/offers"

        />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_round_search_77"
        android:title="@string/search" />

    <item
        android:id="@+id/navigation_featured"
        android:icon="@drawable/ic_baseline_stars_77"
        android:title="@string/featured" />

    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/img_acc_sel"
        android:title="@string/account" />

</menu>