<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="10dp"

        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:textColor="@color/black"
            android:textSize="18dp"
            android:fontFamily="@font/cairosemibold"
            android:padding="10dp"
            android:text="@string/policies"

            />


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"

            >

            <TextView
                android:id="@+id/txt_policy"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="start"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:fontFamily="@font/cairosemibold"
                android:padding="10dp"

                />


        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            >

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/agree"
                android:layout_margin="5dp"
                android:id="@+id/btn_agree"
                android:background="@drawable/btn_design"
                android:fontFamily="@font/cairosemibold"
                android:textColor="#ffffff"

                />


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/disagree"
                android:layout_margin="5dp"
                android:id="@+id/btn_disagree"
                android:background="@drawable/btn_design"
                android:fontFamily="@font/cairosemibold"
                android:textColor="#ffffff"

                />


        </LinearLayout>


    </LinearLayout>


</LinearLayout>