<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="230dp"
    android:layout_gravity="center"
    android:orientation="vertical"
    app:cardElevation="10dp"
    app:cardCornerRadius="30dp"
    android:layout_margin="15dp"

    >


    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="230dp"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center"
        android:paddingBottom="15dp"

        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cairosemibold"
            android:textSize="20dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_margin="10dp"
            android:id="@+id/txt_state"
            android:textColor="@color/black"

            />


        <EditText
            android:id="@+id/txt_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/verify_code"
            android:inputType="number"
            android:layout_gravity="center"
            android:gravity="center"
            android:digits="0123456789"
            android:maxLength="6"

            />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center"

            >

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/white"
                android:text="@string/verify"
                android:fontFamily="@font/cairosemibold"
                android:id="@+id/btn_ok"
                android:layout_margin="10dp"

                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/white"
                android:text="@string/cancel"
                android:fontFamily="@font/cairosemibold"
                android:id="@+id/btn_cancel"
                android:layout_margin="10dp"

                />

        </LinearLayout>

    </LinearLayout>



</androidx.cardview.widget.CardView>