<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activities.ForgetPasswordActivity"
        android:orientation="vertical"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/colorPrimaryDark"

            >

            <ImageButton
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:background="@drawable/ic_baseline_arrow_back_24"
                android:id="@+id/btn_back"
                android:layout_margin="15dp"

                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/pass_recover"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:layout_weight="1"

                />


            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/ic_forg_password"
                android:layout_margin="10dp"

                />



        </LinearLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            >

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"

                    android:paddingTop="25dp"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:paddingBottom="15dp"

                    >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="16dp"
                        android:background="@drawable/input_text"

                        >
                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            app:srcCompat="@drawable/ic_baseline_call_35"
                            android:layout_gravity="center"/>
                        <EditText
                            android:id="@+id/txt_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/phone"
                            android:layout_marginLeft="15dp"
                            android:background="#00000000"
                            android:textSize="16dp"
                            android:inputType="phone"
                            android:digits="0123456789"
                            android:maxLength="11"
                            android:singleLine="true"

                            />

                    </LinearLayout>

                    <Button
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/btn_design"
                        android:textColor="@color/white"
                        android:text="@string/recover"
                        android:layout_margin="10dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:id="@+id/btn_recover"

                        />


                </LinearLayout>

            </ScrollView>

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/progress_bar_loading"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:visibility="gone"

                />


        </RelativeLayout>



    </LinearLayout>


</layout>